--- a/packages/env/tsconfig.json
+++ b/packages/env/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/node16.json",
+  "extends": "../tsconfig/node16.json",
   "include": ["."],
   "exclude": ["node_modules"]
 }
